# shadowChat1.0

./: .env.example  .gitignore  AGENT.md  AGENTS.md  LICENSE  PERFORMANCE_OPTIMIZATIONS.md  PLAN.md  README.md  STATUS.md  TASK.md  eslint.config.js  index.html  jest.config.js  netlify.toml  package-lock.json  package.json  render.yaml  setup.sh  tsconfig.app.json  tsconfig.test.json  vite.config.ts
docs/: ADMIN_ACCESS.md  APP_RELEASES.md  ARCHITECTURE.md  ART_BOARD.md  AUTOMATION_APPROVAL_QUEUE.md  CHANNEL_BANS.md  DEFERRED_FOLLOWUPS.md  DEPLOYMENT_GUIDE.md  ESP_BRIDGE_AUTH_MODEL_SPEC.md  ESP_BRIDGE_BACKEND_IMPLEMENTATION_PROPOSAL.md  ESP_BRIDGE_BACKEND_SCHEMA_PROPOSAL.md  ESP_BRIDGE_DOCUMENTATION_REVIEW.md  ESP_BRIDGE_FEATURE_ROADMAP.md  ESP_BRIDGE_OTA_AND_OFFLINE_SOFTWARE_PLAN.md  ESP_BRIDGE_PAIRING_FLOW_SPEC.md  ESP_BRIDGE_PHASE0_IMPLEMENTATION_BRIEF.md  ESP_BRIDGE_PHASE0_PROGRESS_2026-04-23.md  ESP_BRIDGE_PHASE0_SPIKE_CHECKLIST.md  ESP_BRIDGE_PROTOCOL_DRAFT.md  ESP_BRIDGE_RELEASE_RUNBOOK.md  ESP_BRIDGE_SESSION_ISSUANCE_AND_PAIRING_EXCHANGE.md  ESP_BRIDGE_TUI_PRODUCTION_READINESS.md  ESP_BRIDGE_TUI_UX_SPEC.md  FEEDBACK_SUBMISSIONS.md  FULL_CODEBASE_AUDIT_NEXT_STEPS_2026-06-01.md  GOAL_PLAYBOOKS.md  LINK_PREVIEWS.md  LIQUID_GOLD_DARK_REWORK.md  MOBILE_PERFORMANCE_OPTIMIZATION_PLAN.md  NATIVE_IOS_APP_PLAN.md  NEWS_TAB_AND_SCRAPER.md  PHONE_INSTALL_ONBOARDING.md  PRODUCTION_ROLLBACK_AND_MEDIA_FRAME_FIX_2026-06-09.md  SETUP_GUIDE.md  (+25 more)
firmware/esp-bridge/main/: CMakeLists.txt  Kconfig.projbuild  bridge_usb_bootstrap.c  bridge_usb_bootstrap.h  idf_component.yml  main.c
(+662 files in other folders)
